--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#8B8F8F</color>
     <color  name = "border">#000000</color>
     <color  name = "white">#FFFF</color>
+    <color name="grayText">#729fa0</color>
 </resources>
