--- a/app/src/main/res/layout/activity_home2.xml
+++ b/app/src/main/res/layout/activity_home2.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="WhatToCook.Model.HomeActivity2"
-    android:background="#FFFFFF">
+    android:background="#F9F9F9">
 
 
 
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="28dp"
-        android:background="#FFFFFF"
+        android:background="#F9F9F9"
         >
 
     </androidx.appcompat.widget.Toolbar>
