--- a/app/src/main/res/layout/drawer_menu.xml
+++ b/app/src/main/res/layout/drawer_menu.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#416c6e"
+    android:background="#D5FDFFFF"
     android:id="@+id/linear">
 
     <LinearLayout
@@ -37,7 +37,7 @@
 
     <Space
         android:layout_width="wrap_content"
-        android:layout_height="85dp">
+        android:layout_height="30dp">
 
     </Space>
 
