--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -55,6 +55,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
                 android:text="Nombre comida"
+                android:fontFamily="@font/arima_madurai_regular"
                 android:textColor="#000000"
                 android:textStyle="bold"
                 android:layout_centerHorizontal="true"
@@ -69,6 +70,7 @@
                 android:layout_below="@id/nombreComidaTextCard"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/arima_madurai_regular"
                 android:textSize="13sp"
                 android:text="Raza"
                 android:textColor="#000000"
