--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,8 +9,6 @@
 
 
 
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -49,6 +47,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/card_desayuno"
+                android:fontFamily="@font/arima_madurai_regular"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="5dp"
                 android:text="Desayuno">
@@ -90,6 +89,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/card_almuerzo"
+                android:fontFamily="@font/arima_madurai_regular"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="5dp"
                 android:text="Almuerzo">
@@ -130,6 +130,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
+                android:fontFamily="@font/arima_madurai_regular"
                 android:layout_marginTop="5dp"
                 android:text="Merienda">
 
@@ -172,6 +173,7 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="5dp"
                 android:foregroundGravity="center"
+                android:fontFamily="@font/arima_madurai_regular"
                 android:text="Cena">
 
             </TextView>
